# src/schemas/localSchema.js
@@ -3,15 +3,15 @@ const yup = require("yup");
 // Atributos necessários da tabela LOCAIS DE PERSERVAÇÃO
 const localSchema = yup.object().shape({
   name: yup.string().required(),
-  localidade: yup.string().required(),	//CEP, complemento... não sei se é a melhor forma.
-  descricao: yup.string().required(),
+  address: yup.string().required(),	//CEP, complemento... não sei se é a melhor forma.
+  cep: yup.string().nullable(),
   userId: yup.number().integer(),
   lat: yup.string(),		
   lon: yup.string()
 });
 
 /*
- localidade: yup.object().shape({
+ address: yup.object().shape({
 	CEP: yup.string(),
 	complemento: yup.string()
  })
